Added Bootstrap Classes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2> Home</h2<h2> 
+<div class = "jumbotron text-center">
+	<h1> Welcome to Dev Meet<h1>
+	<h3>A Membership site where Entrepreneurs can meet Developers</h3>
+</div> 
