--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        
           <%=link_to root_path, class: "navbar-brand" do%>
-            <i class="fa fa-user"></i>
+            <i class="fa fa-users"></i>
               Dev Meet
               <% end%>
       </div>
@@ -25,7 +26,7 @@
           <li><%= link_to "About", about_path%></li>
         </ul>
 
-      </div>
+      </div> <!--Navbar collapse--> 
     </div>
   </nav>
   <div class=  'container'>
