Added validations,and create action with flash hash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
     </div>
   </nav>
   <div class="container">
+    <%flash.each do |key,value| %>
+      <%= content_tag :div, value, class: "alert alert-#{key}"%>
+    <%end%>
 
     <%= yield %>
 
