--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,21 @@
 <div class = "jumbotron text-center">
 	<h1> Welcome to Dev Meet<h1>
 	<h3>A Membership site where Entrepreneurs can meet Developers</h3>
+	<div class = "row">
+		<div class="col-md-6">
+			<div class="well">
+				<h2 class= "text-centre">Basic Membership </h2>
+				<h4>Sign up for free and get basic access to the community</h4>
+				<br>
+				<%=link_to "Sign up free",new_user_registration_path, class: 'btn btn-primary btn-lg btn-block'%>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="well">
+				<h2 class= "text-centre">Pro Membership </h2>
+				<h4>Sign up for the pro account for $5/month and get access to the community and contact information!</h4>
+				<%=link_to "Sign up Pro",new_user_registration_path, class: 'btn btn-success btn-lg btn-block'%>
+			</div>
+		</div>
+
 </div> 
