--- a/app/views/devise/registrations/_basic_form.html.erb
+++ b/app/views/devise/registrations/_basic_form.html.erb
@@ -1,5 +1,7 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'basic_form'}) do |f| %>
       <%= devise_error_messages! %>
+
+      <%= hidden_field_tag 'plan', params[:plan] %>
 
       <div class="field form-group">
         <%= f.label :email %><br />
