Added Profile new action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+
+<%= link_to "Create your profile!",new_user_profile_path(current_user) if current_user %>
 <div class = "jumbotron text-center">
 	<h1> Welcome to Dev Meet<h1>
 	<h3>A Membership site where Entrepreneurs can meet Developers</h3>
