--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%= image_tag @user.profile.avatar.url %>
 <%= @user.profile.first_name %> <%= @user.profile.last_name %> <br/>
 
 <%= @user.profile.job_title %> <br/>
