--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       </div>
       <div class="collapse navbar-collapse" id="main-nav-collapse">
       <div class="nav navbar-nav navbar-right">
-      <% if  current_user %>
+      <% if  user_signed_in? %>
           <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
       <%else%>
           <%= link_to "Log In" , new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
@@ -33,6 +33,9 @@
 
       </div>
         <ul class="nav navbar-nav navbar-right">
+          <% if  user_signed_in? %>
+          <li> <%= link_to "My Account", edit_user_registration_path %> </li>
+          <%end%>
           <li><%= link_to "About", about_path%></li>
           <li><%= link_to "Contact Us", new_contact_path%></li>
         </ul>
