Corrected some typos

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-  <h1>Welcome to Dev Match</h1>
+  <h1>Welcome to Dev Meet</h1>
   <h3>A membership site where entrepreneurs can meet developers.</h3>
 </div>
 <div class="row">
